change proxy ids to good ol' fulcrum-proxy-N + fix sql bug on proxy